test/test_wrong_return_type_on_assign/test_wrong_return_type_on_assign.mvs
func a() float {}
let b: int;
b = a();
